Prevent crash in SyntaxHighlighter when leaving room

BUG: 467722